inject the community component editor that works with the extension

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
 			"password": "${env:ROKU_PASSWORD}",
 			"rootDir": "${workspaceFolder}/out",
 			"envFile": "${workspaceFolder}/.vscode/.env",
+			"injectRdbOnDeviceComponent": true,
 			"preLaunchTask": "npm: compile",
 		}
 	]
