configure the prelaunch task that makes it work apparrently the zip file needs to exist???

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,9 +19,7 @@
 			// 	"debug": true,
 			// 	"logging": false
 			// },
-			// "preLaunchTask": "npm: compile",
-			// "preLaunchTask": "npm: compile shell"
-			// "enableDebugProtocol": false
+			"preLaunchTask": "npm: build"
 		}
 	]
 }
