two stage build transpile -> inject when using debugger

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,13 +13,16 @@
 			"password": "${env:ROKU_PASSWORD}",
 			// "rootDir": "${workspaceFolder}/out",
 			"envFile": "${workspaceFolder}/.vscode/.env",
-			// "rootDir": "${workspaceFolder}/dist",
-			// "injectRdbOnDeviceComponent": true,
+			"rootDir": "${workspaceFolder}/dist/staging",
+			"stagingDir": "${workspaceFolder}/dist/staging2",
+			"packagePath": "${workspaceFolder}/dist/dev-out.zip",
+			"retainStagingFolder": true,
+			"injectRdbOnDeviceComponent": true,
 			// "bsConst": {
 			// 	"debug": true,
 			// 	"logging": false
 			// },
-			"preLaunchTask": "npm: build"
+			"preLaunchTask": "npm: build dev"
 		}
 	]
 }
